--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ title: blog
 
 <html>
 <head>
-    <title>Gregory Gundersen</title>
+    <title>Baojian Zhou</title>
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
 
-    <meta name='description' content='Gregory Gundersen is a PhD candidate at Princeton.'>
+    <meta name='description' content='Baojian Zhou is an assistant professor at Fudan University.'>
     <!-- A decent browser will parse this fine:
          https://webmasters.stackexchange.com/questions/92744. -->
     <meta name='keywords' content='
@@ -23,7 +23,7 @@ title: blog
         deep learning,
         computer science
     '>
-    <meta name='author' content='Gregory Gundersen'>
+    <meta name='author' content='Baojian Zhou'>
 
     <link rel='shortcut icon' href='/favicon.png?v=e' />
     <link href='/css/blog.css' rel='stylesheet'/>
