--- a/index.html
+++ b/index.html
@@ -7,26 +7,12 @@ title: blog
     <title>Baojian Zhou</title>
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
-
     <meta name='description' content='Baojian Zhou is an assistant professor at Fudan University.'>
-    <!-- A decent browser will parse this fine:
-         https://webmasters.stackexchange.com/questions/92744. -->
-    <meta name='keywords' content='
-        machine learning,
-        statistical machine learning,
-        bayesian inference,
-        statistics,
-        computational statistics,
-        linear algebra,
-        numerical linear algebra,
-        statistical software,
-        deep learning,
-        computer science
-    '>
+    <meta name='keywords' content='machine learning, statistical machine learning, linear algebra'>
     <meta name='author' content='Baojian Zhou'>
-
-    <link rel='shortcut icon' href='/favicon.png?v=e' />
-    <link href='/css/blog.css' rel='stylesheet'/>
+    
+    <link rel='shortcut icon' href="{{ '/favicon.png?v=e' | relative_url }}" />
+    <link rel='stylesheet' href="{{ '/css/blog.css' | relative_url }}"/>
 
     {% include mathjax.html %}
 </head>
@@ -37,7 +23,7 @@ title: blog
             {% for post in site.posts %}
                 <div class='post-row'>
                     <p class='post-title'>
-                        <a href="{{ post.url }}">
+                        <a href="{{ post.url | relative_url }}">
                             {% katexmm %}
                             {{ post.title }}
                             {% endkatexmm %}
